# hotel_problems

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml
common/: bootstrap_mixin.py
common/middlewares/: middleware.py
common/utils/: formater.py
common/utils/access/: filters.py  scope.py
core/: context_processors.py  urls.py
core/settings/: base.py  dev.py  env.py
hotels/: admin.py  models.py  urls.py  views.py
hotels/migrations/: 0001_initial.py  0002_initial.py  0003_alter_hotel_id.py  0004_remove_hoteldepartment_hotels_hote_hotel_i_e5c20c_idx_and_more.py  0005_role_visibility.py
hotels/templates/hotels/: list.html
issues/: admin.py  models.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_initial.py  0003_remove_issuecategory_issues_issu_hotel_i_e6f60e_idx_and_more.py
issues/services/: status.py  visibility.py
issues/templates/issues/: _issue_actions.html  _issue_status_controls.html  _issue_status_controls_workers.html  _issue_table.html  issue_detail.html  issue_list.html
notifications/: models.py  urls.py
notifications/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/components/alerts/: alert.html
templates/components/buttons/: button.html
templates/components/cards/: card.html
templates/components/inputs/: input.html
templates/components/links/: link.html
templates/components/modals/: modal.html
templates/components/paginations/: pagination.html
templates/components/tabels/: middle_table.html
templates/components/tables/: base.html  table.html
templates/includes/: footer.html  header.html
users/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/services/: auth_tokens.py  jwt_cookies.py
users/templates/staff/: _auth_card.html  dashboard.html  login.html  register.html  success_register.html
users/tests/: conftest.py  test_middleware_jwt_refresh.py  test_services_auth_tokens.py  test_services_jwt_cookies.py  test_views_staff_auth.py
