[project]
name = "v1"
version = "0.1.0"
description = ""
authors = [
    {name = "faiver90",email = "faiver90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
